force-app/main/default/objects/Cart__c/fields/PriceBookEntryID__c.field-meta.xml
<CustomField>
    <fullName>PriceBookEntryID__c</fullName>
    <label>PriceBookEntryID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>